fixed icon overlap issue

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -65,6 +65,7 @@
 	margin: 0;
 	padding: 0;
 	height: 1.25rem;
+	z-index: 1; /* preventing icon overlap */
 }
 
 .loading {
